# VibeLang

./: .gitignore  CONTRIBUTING.md  LANGUAGE_SPEC.md  README.md  pyproject.toml  vibelang.toml.example
compiler/: cli.py
compiler/codegen/: README.md  __init__.py  codegen.py
compiler/formatter/: README.md  formatter.py
compiler/lexer/: IMPLEMENTATION.md  README.md  __init__.py  lexer.py
compiler/optimizer/: README.md  optimizer.py
compiler/parser/: IMPLEMENTATION.md  README.md  __init__.py  ast_nodes.py  parser.py
compiler/typechecker/: README.md  __init__.py  typechecker.py
compiler/verifier/: IMPLEMENTATION.md  README.md  __init__.py  verifier.py
docs/: grammar.md  spec.md
examples/: bank_transfer.vbl  types.vbl
stdlib/: README.md
tests/: README.md  test_codegen.py  test_formatter.py  test_lexer.py  test_optimizer.py  test_parser.py  test_typechecker.py  test_verifier.py
