[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vibelang"
version = "0.1.0"
description = "AI-native programming language with built-in formal verification"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
vibelang = "compiler.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
